fix mobile dark mode

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -224,7 +224,7 @@
 }
 
 .dropdown-content {
-    @apply shadow bg-base-100 rounded-[3px] text-black text-[16px];
+    @apply shadow bg-white rounded-[3px] text-black text-[16px];
 }
 
 /* CHECKBOX */
